Fix double border and inner shadow in the YoastSelect [P3-172]

--- a/packages/components/src/select/select.css
+++ b/packages/components/src/select/select.css
@@ -83,6 +83,8 @@
 
 .yoast-select-container .yoast-select__control {
 	border-radius: 0;
+	border: none;
+	background-color: transparent;
 }
 
 .yoast-select-container .yoast-select__option {
